# mimic-ai

./: CLAUDE.md  COMMIT_MESSAGE.txt  PROJECT_PLAN.md  bash.exe.stackdump  index.html  package-lock.json  package.json
docs/: CHANGELOG.md  CHANGELOG_STAGE9_FIX.md  CODE_REVIEW_PLAN.md  DESIGN.md  REQUIREMENTS.md  REVIEW-12-13-FIX-PLAN.md  TASKS.md
drivers/interception/: README.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test_code_enum.rs  test_enum.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: admin.rs  config.rs  driver.rs  hotkeys.rs  hotkeys_interception.rs  keyboard_worker.rs  lib.rs  main.rs  mouse_picker.rs  mouse_worker.rs  sound.rs  sound_recorder.rs  state.rs
src/components/: AppSidebar.vue  AppStatusBar.vue  AppTitleBar.vue  KeyCaptureInput.vue  MenuIcon.vue
src/lib/: configUtil.ts  keyMap.ts  pages.ts
src/pages/: HomePage.vue  KeyboardPage.vue  MousePage.vue  SettingsPage.vue  SettingsPage.vue.bak
src/stores/: appStore.ts
src/styles/: base.css  theme.css
src/types/: config.ts
